a little bit of help cleanup

--- a/org.rulez.magwas.zenta.help/help/model_tree.html
+++ b/org.rulez.magwas.zenta.help/help/model_tree.html
@@ -6,81 +6,14 @@
 
 <body>
 <h1>The Model Tree</h1>
-<p>An ZentaMate 2.0 model consists of a number of ZentaMate  elements belonging to three &quot;layers&quot; - the &quot;Business&quot; layer, the &quot;Application&quot;  layer and the &quot;Technology&quot; layer. Each ZentaMate element belongs to one of  these layers. For example, a &quot;Business Object&quot; belongs to the &quot;Business&quot; layer  and an &quot;Application Component&quot; belongs to the Application layer. The following  is a list of all the ZentaMate elements grouped by their layers:</p>
-<p><strong><em>Business Layer<br>
-  </em></strong>Business actor<br>
-  Business role<br>
-  Business collaboration<br>
-  Business interface<br>
-  Business object<br>
-  Business process<br>
-  Business function<br>
-  Business interaction<strong><em><br>
-  </em></strong>Business event<br>
-  Business service<br>
-  Representation<br>
-  Meaning<br>
-  Value<strong><em><br>
-  </em></strong>Product<br>
-  Contract<br>
-  Location
+<p>A model consists of a number of elements.
 </p>
-<p><strong><em>Application Layer<br>
-  </em></strong>Application component<br>
-  Application collaboration<br>
-  Application interface<br>
-  Data object<br>
-  Application function<br>
-  Application interaction<br>
-  Application service</p>
-<p><strong><em>Technology Layer<br>
-  </em></strong>Node<br>
-  Device<br>
-  Network<br>
-  Communication path<br>
-  Infrastructure interface<br>
-  Infrastructure function  <br>
-  System software<br>
-  Infrastructure service<br>
-  Artifact</p>
-<p>The ZentaMate 2.0 specification introduces the additional following extensions and concepts:</p>
-<p><strong><em>Motivation<br>
-</em></strong>Stakeholder<br> 
-Driver<br>
-Assessment<br> 
-Goal<br>
-Principle<br>
-Requirement<br> 
-Constraint</p>
-<p><strong><em>Implementation &amp; Migration<br>
-</em></strong>Work package<br> 
-Deliverable
-<br> 
-Plateau
-<br> 
-Gap
-</p>
-<p>Each element in the model can connect to one or more other  elements via one or more relationships (connections). These are as follows:</p>
-<p><strong><em>Relationships<br>
-  </em></strong>Association<br>
-  Access<br>
-  Used by<br>
-  Realization<br>
-  Assignment<br>
-  Aggregation<br>
-  Composition<br>
-  Flow<br>
-  Triggering<br>
-  Grouping<br>
-  Junction<br>
-  Specialization<br>
-  Influence
-</p>
-<p>It is beyond the scope of this guide to explain these  elements and their relationships. For more information refer to the ZentaMate   Specification Guide (available from <a href="http://www.zenta.org/">http://www.zenta.org/</a>)</p>
-<p>An ZentaMate model consists of configurations of these  elements connected to each other via the various relationships. The normative model is represented in Zenta in the &quot;Models&quot; window as a tree structure  organised into folders:</p>
+<p>Each element in the model can connect to one or more other  elements via one or more relationships (connections).</p>
+<p>Until you create a template view (or load a model with it), you will have only one type of element and relationship. You can define other types with creating metamodels. A metamodel is just a view with a property called "template"</p>
+<p>A model consists of configurations of these  elements connected to each other via the various relationships. The normative model is represented in Zenta in the &quot;Models&quot; window as a tree structure  organised into folders:</p>
 <p class="caption"> <img border="0" width="315" height="649" src="img/model-tree.png"><br>
-The Model Tree window showing an example model for &quot;Zentasurance&quot;</p>
-<p>Each ZentaMate element and relationship is placed under its  respective folder in the Model Tree.</p>
+The Model Tree window showing an example model</p>
+<p>Each element and relationship is placed in a hierarchy of folders in the Model Tree.</p>
 <p>&nbsp;</p>
 </body>
 </html>
