--- a/org.rulez.magwas.zenta.help/help/new_model.html
+++ b/org.rulez.magwas.zenta.help/help/new_model.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<title>Creating a New ZentaMate Model</title>
+<title>Creating a New Model</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-<h1>Creating a New ZentaMate Model</h1>
-<p>To create a new, blank ZentaMate model in Zenta do the following:</p>
+<h1>Creating a New Model</h1>
+<p>To create a new, blank model in Zenta do the following:</p>
 <p>Select &quot;<strong>Empty Model</strong>&quot;  from the main &quot;<strong>File-&gt;New</strong>&quot; menu or from the button on the main toolbar:</p>
 <p class="caption"><img src="img/new-toolbar.png"><br>
 The &quot;New&quot; button</p>
