--- a/org.rulez.magwas.zenta.help/help/front.html
+++ b/org.rulez.magwas.zenta.help/help/front.html
@@ -8,12 +8,12 @@
 
 <p>&nbsp;</p>
 
-<h1>Zenta - ZentaMate Modelling</h1>
+<h1>Zenta - Zenta Es No Tan Archi</h1>
 
 <p><img src="img/splash.png"></p>
 
 <p class="font14"><strong>User Guide</strong></p>
-<p class="font12"><strong>Version 2.4</strong></p>
+<p class="font12"><strong>Version FIXME</strong></p>
 
 <p>&nbsp;</p>
 
