--- a/org.rulez.magwas.zenta.help/help/install.html
+++ b/org.rulez.magwas.zenta.help/help/install.html
@@ -6,7 +6,7 @@
 
 <body>
 	<h1>Installing and Launching Zenta</h1>
-	<p>Download the required version from <a href="http://zenta.magwas.rulez.org/download.html">http://zenta.magwas.rulez.org/download.html</a></p>
+	<p>Download the required version from FIXME<a href="http://zenta.magwas.rulez.org/download.html">http://zenta.magwas.rulez.org/download.html</a></p>
 	<p>The Windows version is installed by means of an executable  installer. Run the installer wizard to install Zenta to your system. Windows XP, Windows Vista and Windows 7/8 32-bit and 64-bit versions are supported.</p>
 	<p>The Mac and Linux versions are packaged in zip and tar.gz  files respectively. Simply un-archive the downloaded archive file and double-click the &quot;Zenta&quot; application file to launch the program.</p>
 
@@ -20,13 +20,13 @@
 
 	<p>The workspace is divided into the following sub-windows:</p>
 	<ul>
-  		<li>The <strong>Models</strong> Tree window. By default this is positioned at the top left and labelled &quot;Models&quot;. This is where one or more ZentaMate models can       be viewed as a tree structure.</li>
-  		<li>The <strong>Properties</strong> window. This displays the properties for a selected ZentaMate element. The properties for the selected element can be edited       here.</li>
-  		<li>The <strong>Outline </strong>window. This window displays the contents of an ZentaMate diagram (View) in miniature as a navigation tool for the selected diagram (View).</li>
+  		<li>The <strong>Models</strong> Tree window. By default this is positioned at the top left and labelled &quot;Models&quot;. This is where one or more models can       be viewed as a tree structure.</li>
+  		<li>The <strong>Properties</strong> window. This displays the properties for a selected element. The properties for the selected element can be edited       here.</li>
+  		<li>The <strong>Outline </strong>window. This window displays the contents of a diagram (View) in miniature as a navigation tool for the selected diagram (View).</li>
   		<li>The <strong>Navigator</strong> window. This window displays the selected model element and all of its relationships with other model elements. It is used to navigate between connected elements via their relationships and is used in conjunction with the Models Tree window.</li>
 		<li>The <strong>Palette</strong> window. When opened will display a single window for the drawing Palette used in Views.</li>
 		<li>The <strong>Visualiser</strong> window. This window displays the selected model element and all of its relationships with other model elements in a graphical way. It is the graphical equivalent of the Navigator.</li>
-		<li>The <strong>Hints</strong> window. This displays short textual hints for the selected object. For example, selecting an ZentaMate &quot;Business Actor&quot;       diagram element displays a short summary of that object's meaning and purpose. Selecting an item or hovering over an item, in the diagram's palette also displays a hint in the window.</li>
+		<li>The <strong>Hints</strong> window. This displays short textual hints for the selected object. For example, selecting a  diagram element displays a short summary of that object's meaning and purpose. Selecting an item or hovering over an item, in the diagram's palette also displays a hint in the window.</li>
 	</ul>
 	
 	<p>These sub-windows can be re-arranged by dragging them into  new positions, or by dragging them out of the main application window to become detached from the main window.</p>
