--- a/org.rulez.magwas.zenta.help/help/model_tree_folders.html
+++ b/org.rulez.magwas.zenta.help/help/model_tree_folders.html
@@ -6,42 +6,8 @@
 
 <body>
 <h2>Folders and Organisation</h2>
-<p>A model in Zenta is organised into a basic folder structure  representing the three ZentaMate &quot;layers&quot; and the elements' relationships. A  new model comprises the following top level folders:</p>
-<table width="100%" border="0">
-  <tr>
-    <td width="20%"><strong>Business</strong></td>
-    <td width="80%" valign="top">Contains the elements in  the &quot;Business&quot; layer and any user-created sub-folders</td>
-  </tr>
-  <tr>
-    <td><strong>Application</strong></td>
-    <td valign="top">Contains the elements in the  &quot;Application&quot; layer and any user-created sub-folders</td>
-  </tr>
-  <tr>
-    <td><strong>Technology</strong></td>
-    <td valign="top">Contains the elements in the  &quot;Technology&quot; layer and any user-created sub-folders</td>
-  </tr>
-  <tr>
-    <td><strong>Motivation</strong></td>
-    <td valign="top">Contains the elements in the  &quot;Motivation&quot; extension and any user-created sub-folders</td>
-  </tr>
-  <tr>
-    <td><strong>Implementation &amp; Migration</strong></td>
-    <td valign="top">Contains the elements in the  &quot;Implementation &amp; Migration&quot; extension and any user-created sub-folders</td>
-  </tr>
-  <tr>
-    <td><strong>Connectors</strong></td>
-    <td valign="top">Contains the Junction type  elements and any user-created sub-folders</td>
-  </tr>
-  <tr>
-    <td><strong>Relations</strong></td>
-    <td valign="top">Contains the relationships  between elements as they are created in Views (diagrams) and any user-created  sub-folders</td>
-  </tr>
-  <tr>
-    <td><strong>Views</strong></td>
-    <td valign="top">Contains links to  Views (diagrams)</td>
-  </tr>
-</table>
-<p>Elements can be created and deleted directly in the Model  Tree (see <a href="model_tree_add.html">Adding Elements Directly to the Model Tree</a>) or are automatically  added to the appropriate type folder as objects are drawn onto the canvas of a  View (see <a href="view_addnew.html">Adding New Elements to the View from the Palette</a>). All elements in  a folder are automatically sorted alphabetically.</p>
+<p>A model in Zenta is organised into a basic folder structure. You can use any folder structure you like.</p>
+<p>Elements can be created and deleted directly in the Model  Tree (see <a href="model_tree_add.html">Adding Elements Directly to the Model Tree</a>) or are automatically  added to the appropriate folder as objects are drawn onto the canvas of a  View (see <a href="view_addnew.html">Adding New Elements to the View from the Palette</a>). All elements in  a folder are automatically sorted alphabetically.</p>
 <p>&nbsp;</p>
 <h3>User-Created Sub-Folders</h3>
 <p>User sub-folders can be created under the main top-level  folders. This allows you to organise the elements in any way you wish. To add a  new sub-folder to the Model Tree, select a top-level folder (or a user-created  sub-folder), and right-click. A &quot;New&quot; menu item allows you to add a new  sub-folder to the tree.</p>
