--- a/org.rulez.magwas.zenta.help/help/install.html
+++ b/org.rulez.magwas.zenta.help/help/install.html
@@ -11,7 +11,7 @@
 	<p>The Mac and Linux versions are packaged in zip and tar.gz  files respectively. Simply un-archive the downloaded archive file and double-click the &quot;Zenta&quot; application file to launch the program.</p>
 
 	<h2>Example models</h2>
-	<p>Alongside the Zenta installation is an &quot;examples&quot; folder  containing a few simple ZentaMate example models. You can open these in Zenta  from the &quot;Open&quot; menu.</p>
+	<p>Alongside the Zenta installation is an &quot;examples&quot; folder  containing a few simple example models. You can open these in Zenta  from the &quot;Open&quot; menu.</p>
 
 	<h2>Launching Zenta</h2>
 	<p>The new, blank Zenta workspace looks like the following:</p>
