--- a/org.rulez.magwas.zenta.help/help/model_tree_search.html
+++ b/org.rulez.magwas.zenta.help/help/model_tree_search.html
@@ -16,7 +16,7 @@ Searching on both  &quot;Name&quot; and &quot;Documentation&quot;</p>
 <p>To clear the text selection click on the icon to the right  of the text. To clear the filters, deselect &quot;Name&quot; and/or &quot;Documentation&quot;.</p>
 <p>&nbsp;</p>
 <h3>Filtering Element Types</h3>
-<p>To filter certain types of ZentaMate element you can select the  different types to include in the filter/search in the drop-down menu:</p>
+<p>To filter certain types of elements you can select the  different types to include in the filter/search in the drop-down menu:</p>
 <p class="caption"><img width="453" height="585" src="img/model-tree-filter.png"><br>
 Filtering certain element  types</p>
 <p>To reset the element-type filter, select the &quot;Reset Filters&quot; menu item.</p>
