--- a/org.rulez.magwas.zenta.help/help/properties_element_appearance.html
+++ b/org.rulez.magwas.zenta.help/help/properties_element_appearance.html
@@ -29,7 +29,7 @@
   </tr>
 </table>
 <p class="caption"><img src="img/properties_element3.png" width="669" height="266"><br>
-Editing the &quot;Appearance&quot; Properties for an ZentaMate Element in a View</p>
+Editing the &quot;Appearance&quot; Properties for an Element in a View</p>
 <p>&nbsp;</p>
 <p class="font12"><strong>The Figure Tab</strong></p>
 <p>This tab is only available when an element is  selected in a View and only for certain figures - Business Interface, Application Interface, Infrastructure Interface, Application Component, Device, and Node.</p>
