--- a/org.rulez.magwas.zenta.help/help/view_addnew.html
+++ b/org.rulez.magwas.zenta.help/help/view_addnew.html
@@ -37,7 +37,7 @@
 	<p>&nbsp;</p>
 
 	<p class="boxout"><strong><img src="img/tip.png"> Relationships, Rules and Regulations</strong><br/><br/>
-ZentaMate elements can connect to other elements by a given set of relationships (connections). Some relationships are allowed, others are not. If a relationship is not allowed the cursor will show as a &quot;Not Allowed&quot; symbol, a circle with a diagonal line. If a relationship is allowed, it will show as a &quot;plug&quot; symbol. </p>
+elements can connect to other elements by a given set of relationships (connections). Some relationships are allowed, others are not. If a relationship is not allowed the cursor will show as a &quot;Not Allowed&quot; symbol, a circle with a diagonal line. If a relationship is allowed, it will show as a &quot;plug&quot; symbol. </p>
 
 	<p>&nbsp;</p>
 
