--- a/org.rulez.magwas.zenta.help/help/view_junction.html
+++ b/org.rulez.magwas.zenta.help/help/view_junction.html
@@ -13,7 +13,7 @@ The Junction entry in the Palette</p>
 <p>Junctions appear in the Model tree in the  &quot;Connectors&quot; folder. They can also be added directly to the Model Tree by  right-clicking on the &quot;Connectors&quot; folder and selecting the &quot;New&quot; menu item.</p>
 <p class="caption"><img src="img/junction.png" width="395" height="235"><br>
 Example of an &quot;Or&quot; type Junction</p>
-<p class="boxout"><img src="img/tip.png" width="13" height="18"> Note that Zenta does not currently enforce the  full ZentaMate rules when connecting junctions. You should ensure that only  relationships of the same type (Flow or Triggering) are used to connect  elements and junctions.</p>
+<p class="boxout"><img src="img/tip.png" width="13" height="18"> You should ensure that only  relationships of the same type are used to connect  elements and junctions.</p>
 <p>&nbsp;</p>
 </body>
 </html>
