--- a/org.rulez.magwas.zenta.help/help/properties_model.html
+++ b/org.rulez.magwas.zenta.help/help/properties_model.html
@@ -12,7 +12,7 @@
 <table width="100%" border="0">
   <tr>
     <td width="20%" valign="top"><strong>Name:</strong></td>
-    <td width="80%" valign="top">The name of the ZentaMate model</td>
+    <td width="80%" valign="top">The name of the model</td>
   </tr>
   <tr>
     <td valign="top"><strong>File:</strong></td>
