--- a/org.rulez.magwas.zenta.help/help/view_container_nested.html
+++ b/org.rulez.magwas.zenta.help/help/view_container_nested.html
@@ -16,7 +16,7 @@ Child elements contained by a parent element</p>
 A Child Element being Dragged into a Container Element. The Container highlighted in blue</p>
 <p>&nbsp;</p>
 <h2>Creating, Showing and Hiding Relationships between Nested Parent/Child Elements</h2>
-<p>The <a href="http://www.opengroup.org/zenta/doc/ts_zenta/">ZentaMate specification</a> states that the relationships Composition, Aggregation and Association may also be expressed by nesting the model elements. That is to say, an explicit connection need not be drawn between the parent and child elements but that they may be drawn as a container nested type instead.</p>
+<p>Some relationships may also be expressed by nesting the model elements. That is to say, an explicit connection need not be drawn between the parent and child elements but that they may be drawn as a container nested type instead.</p>
 <p>Zenta supports this convention with <strong>Automatic Relationship Management</strong> (ARM). This system ensures that relationships are automatically created and hidden between qualifying parent/child elements. The system can be configured to suit the user's needs. See <a href="prefs_connections.html">Preferences</a> to configure the ARM.</p>
 <p>The best way to explain the <strong>Automatic Relationship Management</strong> system (ARM) is by an example.</p>
 <h3>Example  - Nested sub-processes in a Composite relationship</h3>
