--- a/org.rulez.magwas.zenta.help/help/view_palette_creation_tools.html
+++ b/org.rulez.magwas.zenta.help/help/view_palette_creation_tools.html
@@ -6,18 +6,16 @@
 
 <body>
 <h2>Palette Creation Tools</h2>
-<p>Apart from the <a href="view_palette_tools.html">Selection Tools</a> there are other tools available on the Palette used to create new ZentaMate elements, Notes, Groups and Relations between elements (connections). To add a new element or to the canvas select one and drag it onto or click onto the canvas.</p>
+<p>Apart from the <a href="view_palette_tools.html">Selection Tools</a> there are other tools available on the Palette used to create new elements, Notes, Groups and Relations between elements (connections). To add a new element or to the canvas select one and drag it onto or click onto the canvas.</p>
 <h3>Relations</h3>
-<p>There are eleven types of ZentaMate relation and three types of junction elements (the latter are not strictly connections but they are grouped with the relations on the Palette).</p>
 <p class="caption"><img src="img/palette_relations.png" width="178" height="351"><br>
 The Relations Creation Tools in the Palette</p>
-<p>The first tool is the <a href="view_magic_connector.html">Magic Connector</a>, used for drawing connections. This is followed by creation tools for Specialisation, Composition, Aggregation, Assignment, Realisation, Triggering, Flow, Used By, Access and Association relations. Junctions follow these.</p>
+<p>The first tool is the <a href="view_magic_connector.html">Magic Connector</a>, used for drawing connections. This is followed by creation tools for relations. Junctions follow these.</p>
 <h3>Notes and Groups</h3>
 <p>Used for adding a Note, Group Container, or Note Connection to a View.</p>
 <p class="caption"><img src="img/palette_other.png" width="155" height="79"><br>
 Note, Group and Note Connection Creation Tools</p>
-<h3>ZentaMate Elements</h3>
-<p>These are divided into 5 areas corresponding to the &quot;Business&quot;, Application and &quot;Technology&quot; ZentaMate layers and the extensions &quot;Motivation&quot; and &quot;Implementation &amp; Migration&quot;:</p>
+<h3>Elements</h3>
 <p class="caption"><img src="img/palette_elements.png" width="177" height="761"> <img src="img/palette_elements2.png" width="178" height="268"><br>
 The Creation tools</p>
 <p>Note that a sub-set of these elements will only be available if the current View is restricted to a given <a href="viewpoints.html">Viewpoint</a>.</p>
