--- a/org.rulez.magwas.zenta.help/help/viewpoints.html
+++ b/org.rulez.magwas.zenta.help/help/viewpoints.html
@@ -6,44 +6,16 @@
 
 <body>
 <h1>Viewpoints</h1>
-<p>The ZentaMate Specification states that &quot;...architects and other stakeholders can define their own views on the enterprise architecture. Viewpoints define abstractions on the set of models representing the enterprise architecture, each aimed at a particular type of stakeholder and addressing a particular set of concerns. Viewpoints can both be used to view certain aspects in isolation, and for relating two or more aspects.&quot;</p>
-<p>In practice, a Viewpoint is a sub-set of elements and relationships. Zenta allows you to specify the following Viewpoints:</p>
-<ul>
-  <li>Actor Co-operation</li>
-  <li>Application Behaviour</li>
-  <li>Application Co-operation</li>
-  <li>Application Structure</li>
-  <li>Application Usage</li>
-  <li>Business Function</li>
-  <li>Business Process</li>
-  <li>Business Process Co-operation</li>
-  <li>Business Product</li>
-  <li>Goal Contribution</li>
-  <li>Goal Realisation</li>
-  <li>Implementation and Deployment</li>
-  <li>Implementation and Migration</li>
-  <li>Information Structure</li>
-  <li>Infrastructure</li>
-  <li>Infrastructure Usage</li>
-  <li>Layered</li>
-  <li>Migration</li>
-  <li>Motivation</li>
-  <li>Organisation</li>
-  <li>Principles</li>
-  <li>Project</li>
-  <li>Requirements Realisation</li>
-  <li>Service Realisation</li>
-  <li>Stakeholder</li>
-  <li>Total</li>
-</ul>
-<p>When creating a new View in Zenta, the default  Viewpoint is set to &quot;Total&quot;, meaning that all elements from all layers can be added to the View. Setting a Viewpoint on a View means that a sub-set of elements is available to place on the View. Some other ZentaMate authoring tools require you to specify the Viewpoint in advance when creating the View. Unfortunately, this means that you cannot change your mind should you wish to later change the Viewpoint in the View. Zenta, however, implements <strong>Dynamic Viewpoints</strong> so that you can change the Viewpoint at any time and those elements that are not permitted for that Viewpoint are either &quot;ghosted&quot; out or hidden. Dynamic Viewpoints allow you to change your mind. You don't have to decide up-front what the Viewpoint will be. You can experiment with different Viewpoints for the same View. And if you decide to keep the Viewpoint, you can simply remove any disallowed elements from the View. You could even set up one master View and apply different Viewpoints in a &quot;what if&quot; scenario.</p>
+<p>ArchiMate Specification states that &quot;...architects and other stakeholders can define their own views on the enterprise architecture. Viewpoints define abstractions on the set of models representing the enterprise architecture, each aimed at a particular type of stakeholder and addressing a particular set of concerns. Viewpoints can both be used to view certain aspects in isolation, and for relating two or more aspects.&quot;</p>
+<p>In practice, a Viewpoint is a sub-set of elements and relationships. Zenta allows you to specify the Viewpoints based on sets of templates</p>
+<p>When creating a new View in Zenta, the default  Viewpoint is set to &quot;Total&quot;, meaning that all elements from all layers can be added to the View. Setting a Viewpoint on a View means that a sub-set of elements is available to place on the View. Some other authoring tools require you to specify the Viewpoint in advance when creating the View. Unfortunately, this means that you cannot change your mind should you wish to later change the Viewpoint in the View. Zenta, however, implements <strong>Dynamic Viewpoints</strong> so that you can change the Viewpoint at any time and those elements that are not permitted for that Viewpoint are either &quot;ghosted&quot; out or hidden. Dynamic Viewpoints allow you to change your mind. You don't have to decide up-front what the Viewpoint will be. You can experiment with different Viewpoints for the same View. And if you decide to keep the Viewpoint, you can simply remove any disallowed elements from the View. You could even set up one master View and apply different Viewpoints in a &quot;what if&quot; scenario.</p>
 <p>&nbsp;</p>
 <h2>Setting the Viewpoint</h2>
 <p>To set the Viewpoint for a View, open the View in the View editor and select the required Viewpoint from the main &quot;View-&gt;Viewpoint&quot; menu, or by right-clicking on the View's drawing area and selecting it from the context menu. You can also change the Viewpoint from the View's <a href="properties_view.html">Properties</a> window.</p>
 <p>In the following example we start with a View that has the default &quot;Total&quot; Viewpoint:</p>
 <p><span class="caption"><img src="img/viewpoint_total.png" alt="Dynamic Viewpoint" width="700" height="527"><br>
 A View with the &quot;Total&quot; Viewpoint</span></p>
-<p>Notice that all elements from all the ZentaMate layers (Business, Application, and Technology) are displayed. Also, the Palette has all elements available.</p>
+<p>Notice that all elements are displayed. Also, the Palette has all elements available.</p>
 <p>If we now change the Viewpoint to &quot;Infrastructure&quot; then  any elements that do not belong in this Viewpoint are &quot;ghosted&quot; out in the View. Notice, also, that only the elements permitted for the current Viewpoint are available in the Palette, whilst the others are not available:</p>
 <p><span class="caption"><img src="img/viewpoint_infrastructure.png" alt="Dynamic Viewpoint 2" width="700" height="527"><br>
 The same View with the &quot;Infrastructure&quot; Viewpoint</span></p>
