--- a/org.rulez.magwas.zenta.help/help/views_working.html
+++ b/org.rulez.magwas.zenta.help/help/views_working.html
@@ -6,7 +6,7 @@
 
 <body>
 <h2>Working with Views</h2>
-<p>Once a View has been opened you may now &quot;draw&quot; on the canvas, adding and creating new ZentaMate elements, connections (relationships) and  annotations (notes). As you add figures to the canvas from the palette, the  corresponding ZentaMate elements and relationships are added to the ZentaMate model and  are visible in the Model Tree.</p>
+<p>Once a View has been opened you may now &quot;draw&quot; on the canvas, adding and creating new elements, connections (relationships) and  annotations (notes). As you add figures to the canvas from the palette, the  corresponding elements and relationships are added to the model and  are visible in the Model Tree.</p>
 <p>You  also add existing elements to the View  by dragging and dropping them from the Model Tree into the View. You can add new elements to the Model Tree (see <a href="model_tree_add.html">Adding Elements Directly to the Model Tree</a>) and then drag them to any number of Views in the model. Thus, elements and relations can appear in more than one View, each occurrence referencing the same element in the Model. Thus, if you change the name of the model element it will change for all occurrences in all Views.</p>
 <p>&nbsp;</p>
 </body>
