--- a/org.rulez.magwas.zenta.help/hints/note.html
+++ b/org.rulez.magwas.zenta.help/hints/note.html
@@ -3,6 +3,6 @@
         <link rel="stylesheet" href="style.css" charset="ISO-8859-1" type="text/css"/>
 </head>
     <body>
-    <p>A<em> note</em> is simply a place to add user annotations to a diagram. A <em>note</em> has no semantic meaning in the ZentaMate language.</p>
+    <p>A<em> note</em> is simply a place to add user annotations to a diagram. A <em>note</em> has no semantic meaning.</p>
 </body>
 </html>
