basic object and relation got their final name

--- a/org.rulez.magwas.zenta.help/help/view_container_nested.html
+++ b/org.rulez.magwas.zenta.help/help/view_container_nested.html
@@ -6,7 +6,7 @@
 
 <body>
 <h2>Container Elements and Nested Element Relationships</h2>
-<p>Each graphical element (except for notes and junctions) can  act as a container element for other elements. Dragging and dropping an element  inside of another element means that it becomes a  child of the parent  element. This is useful to represent containment type relationships such as Composition, Aggregation, and Association or for convenient grouping.</p>
+<p>Each graphical element (except for notes and junctions) can  act as a container element for other elements. Dragging and dropping an element  inside of another element means that it becomes a  child of the parent  element. This is useful to represent containment type relationships such as Composition, Aggregation, and Basic or for convenient grouping.</p>
 In  the following screenshot the elements &quot;Register&quot;, &quot;Accept&quot;, &quot;Valuate&quot; and &quot;Pay&quot; are child elements of the parent &quot;Handle Claim Process&quot; element:
 <p class="caption"><img src="img/container1.png" width="620" height="129"><br>
 Child elements contained by a parent element</p>
